"structuring the containers of the hero's file".

--- a/src/app/pages/hero/hero/hero.component.html
+++ b/src/app/pages/hero/hero/hero.component.html
@@ -1,4 +1,26 @@
 <div class="container">
   <app-cabecera></app-cabecera>
+  
+  <div class="body">
+    <div class="ficha">
+      <div class="image">
+        <img src="../../../../assets/Ultimate SpiderMan_resized (1).jpg" >
+      </div>
+      <div class="hero">
+        <div class="title">
+          <h1>Spiderman</h1>
+          <app-favorites-icon></app-favorites-icon>
+        </div>
+        <div class="description">
+          <p> fgfdgfgdh fgfdhgfgh dghfgdhfgdhdfg</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="comics">
+
+    </div>
+
+  </div>
 
 </div>
