--- a/src/app/pages/hero/hero/hero.component.html
+++ b/src/app/pages/hero/hero/hero.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-cabecera></app-cabecera>
-  
+
   <div class="body">
     <div class="ficha">
       <div class="image">
@@ -8,19 +8,27 @@
       </div>
       <div class="hero">
         <div class="title">
-          <h1>Spiderman</h1>
-          <app-favorites-icon></app-favorites-icon>
+          <h1>SPIDERMAN</h1>
         </div>
+
+        <div class="icon">
+            <app-favorites-icon></app-favorites-icon>
+        </div>
+
+
         <div class="description">
           <p> fgfdgfgdh fgfdhgfgh dghfgdhfgdhdfg</p>
         </div>
       </div>
     </div>
-
-    <div class="comics">
-
-    </div>
+  </div>
+  <div class="comics">
+    <div class="Tcomics">COMICS</div>
+    <div class="comiclist"></div>
+    <div></div>
 
   </div>
+
+
 
 </div>
