--- a/src/app/pages/hero/hero/hero.component.html
+++ b/src/app/pages/hero/hero/hero.component.html
@@ -25,7 +25,9 @@
   <div class="comics">
     <div class="Tcomics">COMICS</div>
     <div class="comiclist"></div>
-    <div></div>
+    <div>
+      <app-comic-model></app-comic-model>
+    </div>
 
   </div>
 
