"heroes cards finalised, only the positioning on the home page is left".

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-home></app-home> -->
 
-<app-hero></app-hero>
+<!-- <app-hero></app-hero> -->
+
+<app-home></app-home>
 
 <router-outlet></router-outlet>
 
