--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="body">
     <div class="card">
-      <app-character-card></app-character-card>
+      <app-character-model></app-character-model>
     </div>
 
   </div>
