--- a/src/app/models/character.model/character.model.component.css
+++ b/src/app/models/character.model/character.model.component.css
@@ -1,18 +1,17 @@
-/* character.model.component.css */
 .heroes-container {
   display: grid;
-  gap: 1rem;
-  padding: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* Ajusta dinámicamente las columnas */
+  gap: 16px;
+  padding: 0;
 }
 
 .card-character {
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  width: 300px;
-  color:  rgb(255, 255, 255);
-
+  color: rgb(255, 255, 255);
   border: solid;
   border-width: 1px;
   overflow: hidden;
@@ -23,7 +22,7 @@
   background-color: red;
 }
 
-.card-character::before {
+/* .card-character::before {
   content: '';
   position: absolute;
   bottom: -1px;
@@ -33,12 +32,21 @@
   border-style: solid;
   border-width: 0 0 35px 35px;
   border-color: transparent transparent rgb(254, 253, 253);
+} */
+
+.card-bottom {
+  width: 100%;
+  height: 100px;
 }
 
-
 .character-image {
-  width: 300px;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.test {
+  height: 250px;
 }
 
 .red-line {
@@ -51,18 +59,19 @@
   text-align: center;
   display: flex;
   justify-content: space-around;
-  padding-bottom: 40px;
+
   background-color: black;
   width: 100%;
   transition: background-color 0.3s ease;
 }
 
-.name  {
+.name {
   width: 80%;
+  text-align: center; /* Center-align the name */
 }
 
 .name h1 {
-  font-size: 24px;
+  font-size: 14px;
   padding-right: 100px;
   color: white;
 }
@@ -71,3 +80,72 @@
   margin-top: 10px;
   width: 20%;
 }
+
+.heroes-container2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* Ajusta dinámicamente las columnas */
+  gap: 16px;
+  padding: 0;
+}
+
+.card-character2 {
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0;
+  box-shadow: -5px 0 10px -5px rgba(0, 0, 0, 0.5);
+  position: relative;
+
+  color: rgb(255, 255, 255);
+  border: solid;
+  border-width: 1px;
+}
+
+.card-character2::before {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  right: -1px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 0 15px 15px;
+  border-color: transparent transparent rgb(254, 253, 253);
+}
+
+.card-bottom2 {
+  background-color: black;
+}
+
+.red-line2 {
+  height: 10px;
+  background-color: red;
+}
+
+.info-character2 {
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+
+.name2 h1 {
+  font-size: 1.2rem;
+  color: white;
+}
+
+.character-image2 {
+  object-fit: cover;
+}
+
+.card-bottom2:hover {
+  background-color: red;
+}
+
+.favorite2 {
+  margin: 10px;
+}
+
