--- a/src/app/models/character.model/character.model.component.css
+++ b/src/app/models/character.model/character.model.component.css
@@ -1,3 +1,11 @@
+
+.character-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 .heroes-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* Ajusta dinámicamente las columnas */
@@ -6,89 +14,6 @@
 }
 
 .card-character {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  color: rgb(255, 255, 255);
-  border: solid;
-  border-width: 1px;
-  overflow: hidden;
-  box-shadow: -5px 0 10px -5px rgba(0, 0, 0, 0.5);
-}
-
-.card-character:hover .info-character {
-  background-color: red;
-}
-
-/* .card-character::before {
-  content: '';
-  position: absolute;
-  bottom: -1px;
-  right: -1px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 0 35px 35px;
-  border-color: transparent transparent rgb(254, 253, 253);
-} */
-
-.card-bottom {
-  width: 100%;
-  height: 100px;
-}
-
-.character-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.test {
-  height: 250px;
-}
-
-.red-line {
-  width: 100%;
-  height: 10px;
-  background-color: red;
-}
-
-.info-character {
-  text-align: center;
-  display: flex;
-  justify-content: space-around;
-
-  background-color: black;
-  width: 100%;
-  transition: background-color 0.3s ease;
-}
-
-.name {
-  width: 80%;
-  text-align: center; /* Center-align the name */
-}
-
-.name h1 {
-  font-size: 14px;
-  padding-right: 100px;
-  color: white;
-}
-
-.favorite {
-  margin-top: 10px;
-  width: 20%;
-}
-
-.heroes-container2 {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* Ajusta dinámicamente las columnas */
-  gap: 16px;
-  padding: 0;
-}
-
-.card-character2 {
   background-color: lightgray;
   display: flex;
   flex-direction: column;
@@ -102,7 +27,7 @@
   border-width: 1px;
 }
 
-.card-character2::before {
+.card-character::before {
   content: '';
   position: absolute;
   bottom: -1px;
@@ -114,16 +39,16 @@
   border-color: transparent transparent rgb(254, 253, 253);
 }
 
-.card-bottom2 {
+.card-bottom {
   background-color: black;
 }
 
-.red-line2 {
+.red-line {
   height: 10px;
   background-color: red;
 }
 
-.info-character2 {
+.info-character {
   height: 70px;
   display: flex;
   flex-direction: row;
@@ -132,20 +57,20 @@
   padding-left: 10px;
 }
 
-.name2 h1 {
+.name h1 {
   font-size: 1.2rem;
   color: white;
 }
 
-.character-image2 {
+.character-image {
   object-fit: cover;
 }
 
-.card-bottom2:hover {
+.card-bottom:hover {
   background-color: red;
 }
 
-.favorite2 {
+.favorite {
   margin: 10px;
 }
 
