"Beginning the editing of the hero page".

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
- <app-home></app-home>
+ <!-- <app-home></app-home> -->
 
-<!-- <app-hero></app-hero> -->
+<app-hero></app-hero>
 
 <router-outlet></router-outlet>
 
