--- a/src/app/components/search-bar/search-bar.component.css
+++ b/src/app/components/search-bar/search-bar.component.css
@@ -1,23 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900');
 
-/* Base styling */
+/* Base styling
 body {
-    width: 200px;
+    width: 100%;
     margin: 0 auto;
     font-family: 'Raleway', sans-serif;
 
-}
+} */
 
 /* Search styles */
 .search__container {
-    padding-left: 20px;
+    width: 100%;
     padding-top: 50px;
+
     align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 .search__input {
-    width: 448%;
-    padding: 12px 0 12px 40px; /* Padding to give space for the icon */
+    width: 100%;
+    padding: 12px 0 12px 40px;
     background-color: transparent;
     transition: all 250ms ease-in-out;
     font-size: 14px;
@@ -26,7 +29,7 @@ body {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-size: 18px 18px;
-    background-position: 12px center; /* Icon on the left */
+    background-position: 12px center;
     border-radius: 0;
     border: 1px solid transparent;
     border-bottom: 1px solid #575756;
@@ -44,8 +47,8 @@ body {
 
 .search__input:hover,
 .search__input:focus {
-    padding: 12px 0 12px 40px; /* Padding to give space for the icon */
+    padding: 12px 0 12px 40px;
     border: 1px solid #575756;
     border-radius: 50px;
-    background-position: 12px center; /* Ensure the icon remains on the left */
+    background-position: 12px center;
 }
