--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,16 +1,19 @@
 <div class="container">
   <app-cabecera></app-cabecera>
+  
+ <div class="body">
 
-  <div class="search">
-    <app-search-bar></app-search-bar>
-  </div>
-  <div class="result">
-    <app-result-component></app-result-component>
-  </div>
+    <div class="search">
+     <app-search-bar></app-search-bar>
+    </div>
+    <div class="result">
+      <app-result-component></app-result-component>
+    </div>
 
     <div class="card">
       <app-character-model></app-character-model>
     </div>
 
+  </div>
 
 </div>
