"edition of the comics and also the hero's file with his description".

--- a/src/app/models/character.model/character.html
+++ b/src/app/models/character.model/character.html
@@ -1,7 +1,7 @@
 <!-- character.html -->
 <div  class="heroes-container">
-  <div *ngFor="let hero of heroes"  class="card-character">
-    <img [src]="hero.thumbnail.path + '.' + hero.thumbnail.extension" class="character-image">
+  <div *ngFor="let hero of heroes" routerLink='/hero/{{hero.id}}' class="card-character" (click)="onSelectedHero(hero)  ">
+    <img [src]="hero.thumbnail.path + '.' + hero.thumbnail.extension" class="character-image" >
 
     <div class="card-bottom">
       <div class="red-line"></div>
