--- a/src/app/pages/hero/hero/hero.component.css
+++ b/src/app/pages/hero/hero/hero.component.css
@@ -3,19 +3,19 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch; /* Asegura que los elementos hijos ocupen todo el ancho disponible */
-  width: 101%;
+  width: 100%;
 }
 
 .ficha {
-  width: 200%;
+  width: 100%;
   display: flex;
   background-color: black;
   justify-self: start;
   align-items: center;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
-  align-content: center;
+  /* align-content: center; */
   position: relative; /* Añade posición relativa para que los elementos absolutos se posicionen correctamente */
 }
 
@@ -33,16 +33,19 @@
 
 .body {
   display: flex;
-  width: 101%;
+  width: 100%;
   padding-right: 8px;
 }
 
 .image {
-  padding-top: 2px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hero {
-  width: 400px;
+  width: 100%;
   display: flex;
   padding-left: 40px;
   flex-direction: row;
