--- a/src/app/models/comic.model/comic.model.component.css
+++ b/src/app/models/comic.model/comic.model.component.css
@@ -1,4 +1,53 @@
-.comic-gallery {
+@media (min-width: 1024px) {
+  .comic-gallery {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .comic-gallery img {
+    cursor: pointer;
+    width: 100px;
+    height: auto;
+    transition: transform 0.3s ease;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .comic-gallery img:hover {
+    transform: scale(1.1);
+  }
+
+  .progress-container {
+    position: relative;
+    width: 100%;
+    height: 22px;
+    background-color: #f3f3f3;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 20px;
+  }
+
+  .progress-bar {
+    height: 100%;
+    background-color: red;
+    transition: width 0.3s ease;
+  }
+
+  .progress-text {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #000;
+    font-weight: bold;
+    line-height: 30px;
+  }
+}
+/* .comic-gallery {
   display: flex;
   gap: 10px;
   margin-bottom: 20px;
@@ -44,4 +93,53 @@
   color: #000;
   font-weight: bold;
   line-height: 30px;
+} */
+@media (max-width: 425px) {
+  .comic-gallery {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+
+  .comic-gallery img {
+    cursor: pointer;
+    width: auto;
+    height: auto;
+    transition: transform 0.3s ease;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .comic-gallery img:hover {
+    transform: scale(1.1);
+  }
+
+  .progress-container {
+    position: relative;
+    width: 100%;
+    height: 22px;
+    background-color: #f3f3f3;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 20px;
+  }
+
+  .progress-bar {
+    height: 100%;
+    background-color: red;
+    transition: width 0.3s ease;
+  }
+
+  .progress-text {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #000;
+    font-weight: bold;
+    line-height: 30px;
+  }
 }
