--- a/src/app/pages/hero/hero/hero.component.css
+++ b/src/app/pages/hero/hero/hero.component.css
@@ -1,3 +1,4 @@
+@media (min-width: 1024px) {
 .container {
   display: flex;
   flex-direction: column;
@@ -27,31 +28,42 @@
   width: 0; /* Ancho inicial del triángulo, se aumentará a medida que se defina el tamaño del borde */
   height: 0; /* Altura inicial del triángulo */
   border-style: solid;
-  border-width: 0 0 35px 35px; /* Definición de los bordes para formar un triángulo invertido */
+  border-width: 0 0 20px 20px; /* Definición de los bordes para formar un triángulo invertido */
   border-color: transparent transparent rgb(254, 253, 253); /* Colores de los bordes: transparente, transparente, blanco, transparente */
 }
 
 .body {
   display: flex;
-  width: 100%;
-  padding-right: 8px;
+  /* width: 100%; */
+  height: 300px;
+
 }
 
 .image {
   display: flex;
-  width: 100%;
+  padding-left: 150px;
   height: 100%;
   object-fit: cover;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+
+}
+
+
+.cabecera{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
 .hero {
-  width: 100%;
   display: flex;
   padding-left: 40px;
-  flex-direction: row;
-  align-items: flex-start;
+  padding-right: 200px;
+  flex-direction: column;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .title {
@@ -65,9 +77,8 @@
 
 .description {
   color: white;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
-  line-height: 50px;
 }
 
 .icon {
@@ -77,6 +88,14 @@
   align-items: flex-start;
 }
 
+.comics{
+  display: flex;
+  padding-left: 150px;
+  padding-right: 180px;
+  padding-top: 30px;
+  flex-direction: column;
+}
+
 
 .Tcomics{
   color: black;
@@ -84,4 +103,113 @@
   font-size: 20px;
   line-height: 50px;
   font-weight: bolder;
+}
+}
+
+/* tamaño movil */
+
+@media (max-width: 425px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 100%;
+  }
+
+  .ficha {
+    width: 100%;
+    display: flex;
+    background-color: black;
+    justify-self: start;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    position: relative;
+  }
+
+  .ficha::before {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 20px 20px;
+    border-color: transparent transparent rgb(254, 253, 253);
+  }
+
+  .body {
+    display: flex;
+    height: auto;
+    flex-direction: column;
+  }
+
+  .image {
+    display: flex;
+    padding-left: 0;
+    max-width: 100%;
+    height: 300px;
+    object-fit: cover;
+    justify-content: center;
+    overflow: hidden; /* Agrega este estilo para evitar que la imagen se salga del contenedor */
+  }
+
+  .cabecera {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+
+  .hero {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+
+  .title {
+    display: flex;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: bolder;
+  }
+
+  .description {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+  }
+
+  .icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+  }
+
+  .comics {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    flex-direction: column;
+  }
+
+  .Tcomics {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: bolder;
+  }
+
+
 }
