--- a/src/app/pages/hero/hero/hero.component.html
+++ b/src/app/pages/hero/hero/hero.component.html
@@ -12,12 +12,14 @@
           <img [src]="hero.thumbnail.path + '.' + hero.thumbnail.extension">
         </div>
         <div class="hero">
+          <div class="cabecera">
           <div class="title">
             <h1>{{ hero.name }}</h1>
           </div>
           <div class="icon">
             <app-favorites-icon></app-favorites-icon>
           </div>
+        </div>
           <div class="description">
             <p>{{ hero.description }}</p>
           </div>
