--- a/src/app/pages/hero/hero/hero.component.css
+++ b/src/app/pages/hero/hero/hero.component.css
@@ -1,4 +1,4 @@
-@media (min-width: 1024px) {
+
 .container {
   display: flex;
   flex-direction: column;
@@ -104,7 +104,119 @@
   line-height: 50px;
   font-weight: bolder;
 }
+
+
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 100%;
+  }
+
+  .ficha {
+    width: 100%;
+    display: flex;
+    background-color: black;
+    justify-self: start;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    position: relative;
+  }
+
+  .ficha::before {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 20px 20px;
+    border-color: transparent transparent rgb(254, 253, 253);
+  }
+
+  .body {
+    display: flex;
+    height: auto;
+    flex-direction: column;
+  }
+
+  .image {
+    display: flex;
+    padding-left: 0;
+    max-width: 100%;
+    height: 300px;
+    object-fit: cover;
+    justify-content: center;
+    overflow: hidden; /* Agrega este estilo para evitar que la imagen se salga del contenedor */
+  }
+
+  .cabecera {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+
+  .hero {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+
+  .title {
+    display: flex;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: bolder;
+  }
+
+  .description {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+  }
+
+  .icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+  }
+
+  .comics {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    flex-direction: column;
+  }
+
+  .Tcomics {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: bolder;
+  }
+
+
 }
+
+
+
+
+
 
 /* tamaño movil */
 
@@ -213,3 +325,4 @@
 
 
 }
+
