--- a/src/app/pages/hero/hero/hero.component.html
+++ b/src/app/pages/hero/hero/hero.component.html
@@ -28,10 +28,10 @@
     </div>
     <div class="comics">
       <div class="Tcomics">COMICS</div>
-      <div class="comiclist"></div>
-      <div>
+
+      <div class="comiclist">
         <!-- para pasar una variable de un componente a otro -->
-        <app-comic-model [heroId]="hero.id"></app-comic-model>
+        <app-comic-model [heroId]="hero.id" class="comic"></app-comic-model>
       </div>
     </div>
   </div>
