--- a/src/app/models/comic.model/comic.html
+++ b/src/app/models/comic.model/comic.html
@@ -2,8 +2,12 @@
   <img
     [src]="comic.thumbnail.path + '.' + comic.thumbnail.extension"
     (click)="selectComic(i)"
-    alt="Comic">
-  <p >{{ comic.title }}</p>
+    alt="Comic"
+    class="imageComic">
+    <div class="description">
+    <p>{{ comic.title }}</p>
+    <p>{{ comic.dates[0].date | date: 'yyyy' }}</p>
+  </div>
 </div>
 <div class="progress-container" *ngIf="comics.length > 0">
   <div class="progress-bar" [style.width]="progressWidth + '%'"></div>
