"Finalisation of the Marvel logo route and results component".

--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="header">
-    <div class="left">
+    <div class="left"
+    routerLink="/home">
       <app-marvel-logo></app-marvel-logo>
     </div>
     <div class="right">
