--- a/src/app/components/result-character/result-component/result-component.component.css
+++ b/src/app/components/result-character/result-component/result-component.component.css
@@ -1,9 +1,10 @@
-.result{
+.results{
   color: #080808;
   padding-right: 10px;
   padding-left: 20px;
   font-family: 'Raleway', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 50px;
   font-weight: bolder;
+  background-repeat: no-repeat;
 }
