"Resolved 50 filter and search filter (remains to implement paging)"

--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -5,10 +5,10 @@
       <app-marvel-logo></app-marvel-logo>
     </div>
     <div class="right">
-      <div class="favorite">
+      <div class="favorite" routerLink="/favorites">
         <app-favorites-icon></app-favorites-icon>
       </div>
-      <div class="count">
+      <div class="count" >
         <app-favorites-count></app-favorites-count>
       </div>
 
