--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,17 +1,25 @@
 <div class="container">
-  <app-cabecera></app-cabecera>
+  <app-cabecera ></app-cabecera>
 
  <div class="body">
 
     <div class="search">
-     <app-search-bar></app-search-bar>
+      <!-- el componente search tiene un input que este se le pasa llamado al nombre de la variable
+      entre corchetes y le pasamos el formulario al hijo para que se lo asigne a la etiqueta form
+
+      Es mala práctica pasar de hijo a padre, siempre debemos pasar de padre a hijo
+      -->
+      <app-search-bar [searchForm]="searchForm"></app-search-bar>
     </div>
     <div class="result">
-      <app-result-component></app-result-component>
+      <app-result-component [heroes]="heroesFiltered"></app-result-component>
     </div>
 
     <div class="card">
-      <app-character-model></app-character-model>
+      <app-character-model
+        [heroes]="heroesFiltered"
+        [searchForm]="searchForm"
+      />
     </div>
 
   </div>
